syntax = "proto3";

option go_package = "github.com/kishorens18/ecommerce";

package customer;

service CustomerService {
    rpc CreateCustomer (CustomerDetails) returns (CustomerResponse){
        option (google.api.http) = {
            post: "/user/create"
            body: "*"
          };
    } ;
}

message CustomerDetails {
    string Customer_ID = 1;
    string FirstName_ID = 2;
    string LastName_ID = 3;
    string HashesAndSaltedPassword = 4;
    bool EmailVerified = 5;
}

message  CustomerResponse {
    string Customer_ID = 1;
}